# ai-optimizer

./: .dockerignore  .env.example  .env.pytest.example  .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ORACLE_VS_INTEGRATION_GUIDE.md  README.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  conftest.py  litellm_contribution_analysis.md  pyproject.toml  pytest.ini  test.py  test_oraclevs_tool.py  test_vector_store.py  transformation.py
src/: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  _version.py  entrypoint.py  entrypoint.sh  hello_world.py  launch_client.py  launch_server.py  logging_config.py  logging_redaction.py  net_addressing.py  pyproject.toml  runtime_config_fields.py  ssl_cert.py  url_safety.py
src/.streamlit/: config.toml
src/client/: Dockerfile
src/client/app/: main.py
src/client/app/.streamlit/: config.toml
src/client/app/content/: api_server.py  chatbot.py  signin.py  signout.py  testbed.py
src/client/app/core/: api.py  auth.py  embed_status.py  helpers.py  secrets.py  settings.py  sidebar.py
src/client/content/: api_server.py  chatbot.py  testbed.py
src/client/content/config/: config.py  databases.py  mcp_servers.py  models.py  oci.py  settings.py
src/client/content/tools/: prompt_eng.py  split_embed.py  tools.py
src/client/mcp/: client.py  frontend.py
src/client/mcp/rag/: README.md  main.py  pyproject.toml  rag_base_optimizer_config.py  rag_base_optimizer_config_direct.py  rag_base_optimizer_config_mcp.py
src/client/source/spring_ai/: README.md  pom.xml
src/client/spring_ai/: README.md  ollama-values.yaml  pom.xml
src/client/spring_ai/templates/: obaas.yaml  start.sh
src/client/spring_ai/tutorial/: AI_SpringAI_RAG_Paper_final.md
src/client/tests/: conftest.py  test_streamlit_config.py
src/client/tests/content/: test_api_server.py  test_auth_pages.py  test_chatbot.py  test_main.py  test_testbed.py
src/client/tests/core/: conftest.py  test_api.py  test_auth.py  test_embed_status.py  test_helpers.py  test_settings.py  test_sidebar.py
src/client/utils/: api_call.py  client.py  st_common.py  st_footer.py  tool_options.py  vs_options.py  vs_selector.py
src/common/: _version.py  functions.py  help_text.py  logging_config.py  schema.py
src/server/: .gitignore  AGENTS.md  Dockerfile  __init__.py  endpoints.py
src/server/agents/: chatbot.py
src/server/agents/tools/: oraclevs_retriever.py  selectai.py
src/server/api/core/: README.md  bootstrap.py  chat.py  common.py  configuration.py  databases.py  embed.py  embedding.py  mcp.py  models.py  oci.py  prompts.py  selectai.py  settings.py  testbed.py
src/server/api/util/: chat.py  databases.py  embed.py  oci.py  selectai.py  testbed.py
src/server/api/utils/: README.md  chat.py  databases.py  embed.py  mcp.py  models.py  oci.py  selectai.py  settings.py  testbed.py  testbed_metrics.py  webscrape.py
src/server/api/v1/: __init__.py  chat.py  databases.py  embed.py  mcp.py  mcp_prompts.py  models.py  oci.py  probes.py  prompts.py  promtps.py  selectai.py  settings.py  testbed.py
src/server/app/: main.py
src/server/app/agentspec/: agent_llm_only.py  agent_nl2sql.py  flow_vecsearch.py
src/server/app/api/: README.md  deps.py
src/server/app/core/: client_locks.py  config.py  constants.py  databases.py  environ.py  error_detail.py  etc.py  file_utils.py  help_text.py  mcp.py  paths.py  schemas.py  secrets.py  settings.py
src/server/app/database/: __init__.py  config.py  model.py  objects.py  registry.py  schemas.py  settings.py  sql.py
src/server/app/deepsec/: __init__.py  database.py
src/server/app/embed/: document.py  jobs.py  refresh.py  schemas.py  staging.py  utils.py  vector_store.py  webscrape.py
src/server/app/mcp/: server.py
src/server/app/models/: __init__.py  connectivity.py  defaults.py  litellm_embeddings.py  litellm_utils.py  ollama.py  refresh.py  registry.py  schemas.py
src/server/app/oci/: README.md  __init__.py  bucket.py  client.py  config.py  registry.py  schema.py  schemas.py  service.py  settings.py
src/server/app/otel/: __init__.py  setup.py
src/server/app/prompts/: registry.py
src/server/app/runtime/: README.md  common.py  ollama_tools.py
src/server/app/testbed/: database.py  generation.py  metrics.py  schemas.py
src/server/bootstrap/: README.md  bootstrap.py  configfile.py  database_def.py  databases.py  mcp.py  model_def.py  models.py  oci.py  oci_def.py  prompt_eng_def.py  prompts.py  settings.py  settings_def.py
src/server/etc/: README.md
src/server/mcp/: README.md  __init__.py  graph.py  graph.py.orig  server_config.json
src/server/mcp/clients/: sqlcl.py
src/server/mcp/prompts/: cache.py  defaults.py  examples.py  optimizer.py
src/server/mcp/proxies/: sqlcl.py
src/server/mcp/tools/: grading.py  oracle_vs.py  oraclevs_mcp_server.py  oraclevs_retriever.py  rephrase.py  retriever.py  say_hello.py  vector_storage.py  vs_discovery.py  vs_grade.py  vs_grading.py  vs_rephrase.py  vs_retriever.py  vs_tables.py
src/server/mcp_bak/: register_mcp_servers.py  server_config.json
src/server/mcp_bak/server/: archive_mcp.py
src/server/patches/: litellm_patch.py  litellm_patch_oci_auth.py  litellm_patch_oci_streaming.py  litellm_patch_transform.py
src/server/tests/: conftest.py  constants.py  test_main.py
src/server/tests/agentspec/: test_agent_llm_only.py  test_agent_nl2sql.py  test_flow_vecsearch.py
src/server/tests/api/: conftest.py  test_agentspec_endpoints.py  test_client_header_validation.py  test_client_id_type.py  test_databases.py  test_mcp_client_config.py  test_mcp_probes.py  test_mcp_prompt_schema.py  test_mcp_prompts.py  test_mcp_resources.py  test_mcp_tools.py  test_models.py  (+19 more)
src/server/utils/: chat.py  createRDFGraph.py  databases.py  embedding.py  models.py  oci.py  selectai.py  testbed.py
src/server/wip/: createRDFGraph.py  settings.py  validateRDFGraph.py
src/tests/: test_entrypoint.py  test_logging_config.py  test_logging_redaction.py  test_net_addressing.py  test_packaging.py  test_runtime_config_fields.py  test_ssl_cert.py  test_url_safety.py  test_version.py
(+983 files in other folders)
