# spell-checker:disable

[build-system]
requires = ["setuptools>=80.0.0", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-optimizer"
dynamic = ["version"]
description = "Oracle AI Optimizer and Toolkit"
requires-python = ">=3.11"
license =  "UPL-1.0"
authors = [
    {name = "Oracle", email = "obaas_ww@oracle.com"}
]

# - common dependencies that are always needed
dependencies = [
    "langchain-core==1.4.0",
    "httpx==0.28.1",
    "oracledb~=4.0",
    "plotly==6.7.0",
    "pydantic-settings==2.14.1"
]

[project.optional-dependencies]
# Server component dependencies
# - server: server side only
server = [
    "bokeh==3.9.0",
    "docling==2.96.1",          # When bumping docling, also update Dockerfiles and opentofu cloudinit-compute.tpl
    "evaluate==0.4.6",
    "faiss-cpu==1.14.2",
    "fastmcp==3.3.1",
    "giskard==2.19.1",
    "langchain-litellm==0.6.6",
    "langchain-mcp-adapters==0.2.2",
    "langchain-oracledb==1.4.0",
    "langgraph==1.2.2",
    "litellm==v1.87.0",
    "llama-index==0.14.22",
    "matplotlib==3.10.9",
    "oci~=2.0",
    "pyagentspec==26.1.0",
    "pypdf==6.13.3",
    "umap-learn==0.5.12"
]

# - client: client side only
client = [
    "streamlit==1.57.0",
]

# - otel: opentelemetry collector for server-side observability
otel = [
    "opentelemetry-distro==0.63b1",
    "opentelemetry-exporter-otlp==1.42.1",
    "opentelemetry-instrumentation-fastapi==0.63b1",
    "opentelemetry-instrumentation-httpx==0.63b1",
    "opentelemetry-instrumentation-logging==0.63b1",
    "opentelemetry-instrumentation-requests==0.63b1",
    "openinference-instrumentation-langchain==0.1.66"
]

# - dev: for testing/development
dev = [
    "docker",
    "mypy",
    "types-psutil",
    "pandas-stubs",
    "ruff",
    "pyright[nodejs]",
    "pytest-asyncio",
    "pytest-cov",
    "types-jsonschema",
    "yamllint"
]

# - all: all-in-one installation (server (langgraph) + client)
all = [
    "ai-optimizer[server]",
    "ai-optimizer[client]",
    "ai-optimizer[otel]",
]

[tool.setuptools]
# ``src/`` is the package root; the wheel ships its contents at the top
# level (``server``, ``client``, plus the bare-name modules below) so
# runtime imports like ``from server.app...`` resolve directly.
py-modules = ["_version", "entrypoint", "launch_client", "logging_config", "logging_redaction", "net_addressing", "ssl_cert", "url_safety"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
include = ["server*", "client*"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning:litellm",
    "ignore::requests.exceptions.RequestsDependencyWarning",
    ]
markers = [
    "unit: Unit tests (mocked dependencies, fast execution)",
    "integration: Integration tests (real components, may require external services)",
    "slow: Slow tests (deselect with '-m \"not slow\"')",
    "db: Tests requiring Oracle database container (deselect with '-m \"not db\"')",
    "live_oci: Live tests against OCI GenAI (needs AIO_GENAI_COMPARTMENT_ID + AIO_GENAI_REGION; auto-skips otherwise)",
]
norecursedirs = ["tmp", "build"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]
exclude = [
    "**/.venv",
    "build",
    "src/client/source",
    "tmp/"
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]
extend-exclude = ["**/wip/**", "src/client/mcp", "docs/themes/relearn", "docs/public", "docs/static/demoware", "docs/demo"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "PL",     # pylint (PLC, PLE, PLR, PLW)
    "SIM",    # flake8-simplify
    "SLF",    # flake8-self (protected-access)
    "ARG",    # flake8-unused-arguments
]
ignore = [
    "BLE001",  # broad-exception-caught
    "PLR2004", # magic-value-comparison
    "SIM102",  # collapsible-if
]

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-locals = 16
max-returns = 6
max-statements = 50
max-nested-blocks = 6
max-bool-expr = 6

[tool.ruff.lint.per-file-ignores]
"src/client/source/**" = ["ALL"]
"**/tests/**" = [
    "E402",     # module-import-not-at-top-of-file
    "SLF001",   # protected-access
    "PLC0415",  # import-outside-toplevel
    "ARG001",   # unused-function-argument
    "ARG002",   # unused-method-argument
    "ARG005",   # unused-lambda-argument
    "PLR0913",  # too-many-arguments
    "PLR0915",  # too-many-statements
    "PLR2004",  # magic-value-comparison
]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools_scm]
root = "."
fallback_version = "0.0.0"
