[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-optimizer"
dynamic = ["version"]
description = "Oracle AI Optimizer and Toolkit"
requires-python = ">=3.11"
license =  "UPL-1.0"
authors = [
    {name = "Oracle", email = "obaas_ww@oracle.com"}
]

# Common dependencies that are always needed
dependencies = [
    "langchain-core==0.3.74",
    "httpx==0.28.1",
    "oracledb~=3.1",
    "plotly==6.2.0",
]

[project.optional-dependencies]
# Server component dependencies
server = [
    "bokeh==3.7.3",
    "evaluate==0.4.5",
    "fastapi==0.116.1",
    "faiss-cpu==1.11.0.post1",
    "giskard==2.17.0",
    "langchain-anthropic==0.3.19",
    "langchain-azure-ai==0.1.5",
    "langchain-aws==0.2.31",
    "langchain-cohere==0.4.5",
    "langchain-community==0.3.27",
    "langchain-deepseek==0.1.4",
    "langchain-google-genai==2.1.9",
    "langchain-google-vertexai==2.0.28",
    "langchain-groq==0.3.7",
    "langchain-huggingface==0.3.1",
    "langchain-mistralai==0.2.11",
    "langchain-ollama==0.3.6",
    "langchain-openai==0.3.29",
    "langchain-perplexity==0.1.2",
    "langchain-xai==0.2.5",
    "langgraph==0.6.4",
    "litellm==1.75.3",
    "llama-index==0.13.1",
    "lxml==6.0.0",
    "matplotlib==3.10.5",
    "oci~=2.0",
    "psutil==7.0.0",
    "python-multipart==0.0.20",
    "torch==2.8.0",
    "umap-learn==0.5.9.post2",
    "uvicorn==0.35.0",
]

# GUI component dependencies
client = [
    "streamlit==1.48.0",
]

# Test dependencies
test = [
    "pytest",
    "pytest-asyncio",
    "docker",
]

# All-in-one installation (server + client)
all = [
    "ai-optimizer[server]",
    "ai-optimizer[client]",
]

# All-in-one with tests
all-test = [
    "ai-optimizer[server]",
    "ai-optimizer[client]",
    "ai-optimizer[test]",
]

[tool.setuptools]
packages = ["server", "client", "common"]

[tool.setuptools_scm]
root = ".."
fallback_version = "0.0.0"