[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community==0.3.21",
    "langchain-core==0.3.80",
    "langchain-huggingface==0.1.2",
    "langchain-ollama==0.3.2",
    "langchain-openai==0.3.13",
    "mcp>=1.19.0",
    "oracledb~=3.1",
]
